Changes after checking HW

--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
             </ul>
           </nav>
           <ul class="head-nav-contacts list">
-            <li><a href="mailto:info@devstudio.com" class="head-contact">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="head-contact">+38 096 111 11 11</a></li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="head-contact">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="head-contact">+38 096 111 11 11</a>
+            </li>
           </ul>
         </div>
       </div>
     </header>
     <main>
       <!--Рішення-->
-      <section class="effective section">
+      <section class="effective">
         <div class="container container-eff">
           <h1 class="effective-h">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-          <button type="button" class="effective-btn">
-            <span class="effective-btn-text">Замовити послугу</span>
-          </button>
+          <button type="button" class="effective-btn">Замовити послугу</button>
         </div>
       </section>
       <!--Особливості-->
@@ -88,7 +90,7 @@
         </div>
       </section>
       <!--Чим ми займаємося-->
-      <section class="our-work">
+      <section class="our-work section">
         <div class="container">
           <h2 class="our-work-h">Чим ми займаємося</h2>
           <ul class="our-work-list list">
@@ -129,8 +131,10 @@
                 height="260"
                 class="img"
               />
-              <h3 class="team-list-h">Ігор Дем'яненко</h3>
-              <p class="team-list-p">Product Designer</p>
+              <div class="box">
+                <h3 class="team-list-h">Ігор Дем'яненко</h3>
+                <p class="team-list-p">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -140,8 +144,10 @@
                 height="260"
                 class="img"
               />
-              <h3 class="team-list-h">Ольга Рєпіна</h3>
-              <p class="team-list-p">Frontend Developer</p>
+              <div class="box">
+                <h3 class="team-list-h">Ольга Рєпіна</h3>
+                <p class="team-list-p">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -151,8 +157,10 @@
                 height="260"
                 class="img"
               />
-              <h3 class="team-list-h">Микола Тарасов</h3>
-              <p class="team-list-p">Marketing</p>
+              <div class="box">
+                <h3 class="team-list-h">Микола Тарасов</h3>
+                <p class="team-list-p">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -162,8 +170,10 @@
                 height="260"
                 class="img"
               />
-              <h3 class="team-list-h">Михайло Єрмаков</h3>
-              <p class="team-list-p">UI Designer</p>
+              <div class="box">
+                <h3 class="team-list-h">Михайло Єрмаков</h3>
+                <p class="team-list-p">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
