--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,12 @@
             </ul>
           </nav>
           <ul class="head-nav-contacts list">
-            <li><a href="mailto:info@devstudio.com" class="head-contact">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="head-contact">+38 096 111 11 11</a></li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="head-contact">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="head-contact">+38 096 111 11 11</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -64,8 +68,10 @@
           <ul class="portf-list list">
             <li class="item">
               <img src="./images/img-p01.jpg" width="370" height="294" alt="Ноутбук" class="img" />
-              <h2 class="portf-h">Технокряк</h2>
-              <p class="portf-p">Веб-сайт</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Технокряк</h2>
+                <p class="portf-p">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -75,13 +81,17 @@
                 alt="Баскетбол"
                 class="img"
               />
-              <h2 class="portf-h">Постер New Orlean vs Golden Star</h2>
-              <p class="portf-p">Дизайн</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Постер New Orlean vs Golden Star</h2>
+                <p class="portf-p">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/img-p03.jpg" width="370" height="294" alt="Акула" class="img" />
-              <h2 class="portf-h">Ресторан Seafood</h2>
-              <p class="portf-p">Додаток</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Ресторан Seafood</h2>
+                <p class="portf-p">Додаток</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -91,23 +101,31 @@
                 alt="Навушники"
                 class="img"
               />
-              <h2 class="portf-h">Проєкт Prime</h2>
-              <p class="portf-p">Маркетинг</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Проєкт Prime</h2>
+                <p class="portf-p">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/img-p05.jpg" width="370" height="294" alt="Коробки" class="img" />
-              <h2 class="portf-h">Проєкт Boxes</h2>
-              <p class="portf-p">Додаток</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Проєкт Boxes</h2>
+                <p class="portf-p">Додаток</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/img-p06.jpg" width="370" height="294" alt="Монітор" class="img" />
-              <h2 class="portf-h">Inspiration has no Borders</h2>
-              <p class="portf-p">Веб-сайт</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Inspiration has no Borders</h2>
+                <p class="portf-p">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/img-p07.jpg" width="370" height="294" alt="Книга" class="img" />
-              <h2 class="portf-h">Видання Limited Edition</h2>
-              <p class="portf-p">Дизайн</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Видання Limited Edition</h2>
+                <p class="portf-p">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -117,8 +135,10 @@
                 alt="Проєкт LAB"
                 class="img"
               />
-              <h2 class="portf-h">Маркетинг</h2>
-              <p class="portf-p">Маркетинг</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Маркетинг</h2>
+                <p class="portf-p">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -128,8 +148,10 @@
                 alt="Growing Business"
                 class="img"
               />
-              <h2 class="portf-h">Growing Business</h2>
-              <p class="portf-p">Додаток</p>
+              <div class="box-portf">
+                <h2 class="portf-h">Growing Business</h2>
+                <p class="portf-p">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
